classDiagram
    namespace Assign Strategies {
        class Strategy {
            +determines_target_selection_algorithm()
            +guides_mob_behavior()
        }
        class Target {
            +represents_entity_being_attacked()
        }
    }

    namespace Create Mobs {
        class Mob Template {
            +defines_preset_mob_configuration()
        }
    }

    namespace Execute Mob Actions {
        class Action {
            +represents_combat_action()
            +executed_by_all_minions_in_mob()
        }
    }

    namespace Manage Mobs {
        class Minion {
            +represents_individual_token()
            +belongs_to_mob()
        }
        class Mob {
            +groups_minions_together()
            +coordinates_group_actions()
        }
    }

    
    %% Associations
    Mob --> Minion : uses
    Mob --> Strategy : uses
    Mob --> Action : uses
    Minion --> Mob : uses
    Mob Template --> Mob : uses
    Strategy --> Target : uses
    Strategy --> Mob : uses
    Strategy --> Action : uses
    Action --> Mob : uses
    Action --> Target : uses
    Action --> Minion : uses